corrections in manual

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,8 @@
 Package: simCAT
-Title: What the Package Does (One Line, Title Case)
+Title: Implements Computerized Adaptive Testing Simulations
 Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+Author: Alexandre Jaloto [aut, cre] (<https://orcid.org/0000-0002-5291-1768>)
+    Ricardo Primi [ths]
 Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
