--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
-    dplyr
+    dplyr,
+    mirt,
+    mirtCAT
 URL: https://github.com/alexandrejaloto/simCAT
 BugReports: https://github.com/alexandrejaloto/simCAT/issues
