--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Implements Computerized Adaptive Testing Simulations
 Version: 0.0.0.9000
 Author: Alexandre Jaloto [aut, cre] (<https://orcid.org/0000-0002-5291-1768>)
     Ricardo Primi [ths]
-Description: Computerized Adaptive Testing simulations with dichotomic items. Selects items with Maximum Fisher Information method or randomly, with or without constraints (content balancing and item exposure control).
+Description: Computerized Adaptive Testing simulations with dichotomous items. Selects items with Maximum Fisher Information method or randomly, with or without constraints (content balancing and item exposure control).
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
