--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: simCAT
 Title: Implements Computerized Adaptive Testing Simulations
-Version: 0.0.0.9000
-Author: Alexandre Jaloto [aut, cre] (<https://orcid.org/0000-0002-5291-1768>)
-    Ricardo Primi [ths]
-Description: Computerized Adaptive Testing simulations with dichotomous items. Selects items with Maximum Fisher Information method or randomly, with or without constraints (content balancing and item exposure control).
+Version: 0.0.9000
+Author: Alexandre Jaloto <alexandrejaloto@gmail.com> [aut, cre] (<https://orcid.org/0000-0002-5291-1768>)
+    Ricardo Primi [ths] (<https://orcid.org/0000-0003-4227-6745>)
+Maintainer: Alexandre Jaloto <alexandrejaloto@gmail.com>
+Description: Computerized Adaptive Testing simulations with dichotomous and polytomous items. Selects items with Maximum Fisher Information method or randomly, with or without constraints (content balancing and item exposure control). Evaluates simulation in terms of precision, item exposure and test length.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
@@ -11,6 +13,7 @@ RoxygenNote: 7.1.2
 Imports: 
     dplyr,
     mirt,
-    mirtCAT
+    mirtCAT,
+    shiny,
+    shinycssloaders
 URL: https://github.com/alexandrejaloto/simCAT
-BugReports: https://github.com/alexandrejaloto/simCAT/issues
