--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
 Author: Alexandre Jaloto <alexandrejaloto@gmail.com> [aut, cre] (<https://orcid.org/0000-0002-5291-1768>)
     Ricardo Primi [ths] (<https://orcid.org/0000-0003-4227-6745>)
 Maintainer: Alexandre Jaloto <alexandrejaloto@gmail.com>
-Description: Computerized Adaptive Testing simulations with dichotomous and polytomous items. Selects items with Maximum Fisher Information method or randomly, with or without constraints (content balancing and item exposure control). Evaluates simulation in terms of precision, item exposure and test length. Magis & Barrada (2017) <doi:10.18637/jss.v076.c01> Revuelta & Ponsoda (1998) <https:www.jstor.org/stable/1435308>.
+Description: Computerized Adaptive Testing simulations with dichotomous and polytomous items. Selects items with Maximum Fisher Information method or randomly, with or without constraints (content balancing and item exposure control). Evaluates the simulation results in terms of precision, item exposure, and test length. Inspired on Magis & Barrada (2017) <doi:10.18637/jss.v076.c01>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
